fix: adjust Dot component size and color for improved visibility in SearchBar

--- a/src/shared/ui/molecules/SearchBar/SearchBar.module.css
+++ b/src/shared/ui/molecules/SearchBar/SearchBar.module.css
@@ -24,13 +24,18 @@
 }
 
 .filtersWrap {
+  height: 100%;
   position: relative;
   display: grid;
   place-items: center;
 }
 
+.filtersWrap button {
+  height: 100%;
+}
+
 .dot {
   position: absolute;
-  top: 2px;
-  right: 2px;
+  top: 0;
+  right: 0;
 }
